@@ -1,11 +1,4 @@
-/* ../include/setup.h.in.  Generated automatically from configure.in by autoheader.  */
-
-/* Define if on AIX 3.
-   System headers sometimes define this.
-   We just want to avoid a redefinition error message.  */
-#ifndef _ALL_SOURCE
-#undef _ALL_SOURCE
-#endif
+/* include/setup.h.in.  Generated automatically from configure.in by autoheader.  */
 
 /* Define if you need to in order for stat and other things to work.  */
 #undef _POSIX_SOURCE
@@ -23,10 +16,8 @@
 /* Define if your system has unreliable SYSV signals.  */
 #undef SYSV_UNRELIABLE_SIGNALS
 
-/* Define MALLOCH to <malloc.h> if needed.  */
-#if !defined(STDC_HEADERS)
-#undef MALLOCH
-#endif
+/* Define if you have the poll() system call.  */
+#undef USE_POLL
 
 /* Chose only one of NBLOCK_POSIX, NBLOCK_BSD, and NBLOCK_SYSV */
 /* Define if you have posix non-blocking sockets (O_NONBLOCK) */
@@ -41,77 +32,8 @@
 /* Define if you have the mmap() function.  */
 #undef USE_MMAP
 
-/* Define if you are running AIX.  */
-#undef OS_AIX
-
-/* Define if you are running DYNIXPTX.  */
-#undef OS_DYNIXPTX
-
-/* Define if you are running HPUX.  */
-#undef OS_HPUX
-
-/* Define if you are running MIPS.  */
-#undef OS_MIPS
-
-/* Define if you are running NeXT.  */
-#undef OS_NEXT
-
 /* Define if you are running SOLARIS2.  */
 #undef OS_SOLARIS2
-
-/* Define if you have the __dn_skipname function.  */
-#undef HAVE___DN_SKIPNAME
-
-/* Define if you have the bcmp function.  */
-#undef HAVE_BCMP
-
-/* Define if you have the bcopy function.  */
-#undef HAVE_BCOPY
-
-/* Define if you have the bzero function.  */
-#undef HAVE_BZERO
-
-/* Define if you have the dn_skipname function.  */
-#undef HAVE_DN_SKIPNAME
-
-/* Define if you have the getrusage function.  */
-#undef HAVE_GETRUSAGE
-
-/* Define if you have the gettimeofday function.  */
-#undef HAVE_GETTIMEOFDAY
-
-/* Define if you have the index function.  */
-#undef HAVE_INDEX
-
-/* Define if you have the inet_addr function.  */
-#undef HAVE_INET_ADDR
-
-/* Define if you have the inet_aton function.  */
-#undef HAVE_INET_ATON
-
-/* Define if you have the inet_netof function.  */
-#undef HAVE_INET_NETOF
-
-/* Define if you have the inet_ntoa function.  */
-#undef HAVE_INET_NTOA
-
-/* Define if you have the lrand48 function.  */
-#undef HAVE_LRAND48
-
-/* Define if you have the sigaction function.  */
-#undef HAVE_SIGACTION
-
-/* Define if you have the strerror function.  */
-#undef HAVE_STRERROR
-
-/* Define if you have the strtok function.  */
-#undef HAVE_STRTOK
-
-/* Define if you have the strtoken function.  */
-#undef HAVE_STRTOKEN
-
-/* Define if you have the times function.  */
-#undef HAVE_TIMES
 
 /* Define if you have the <errno.h> header file.  */
 #undef HAVE_ERRNO_H
@@ -125,14 +47,8 @@
 /* Define if you have the <string.h> header file.  */
 #undef HAVE_STRING_H
 
-/* Define if you have the <strings.h> header file.  */
-#undef HAVE_STRINGS_H
-
 /* Define if you have the <sys/param.h> header file.  */
 #undef HAVE_SYS_PARAM_H
-
-/* Define if you have the <sys/syslog.h> header file.  */
-#undef HAVE_SYS_SYSLOG_H
 
 /* Define if you have the <unistd.h> header file.  */
 #undef HAVE_UNISTD_H
